WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77448
Vector<T>::operator== shouldn't require T to have operator!=
https://bugs.webkit.org/show_bug.cgi?id=77448
Summary
Vector<T>::operator== shouldn't require T to have operator!=
Anders Carlsson
Reported
2012-01-31 10:01:00 PST
Vector<T>::operator== shouldn't require T to have operator!=
Attachments
Patch
(1.35 KB, patch)
2012-01-31 10:03 PST
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-01-31 10:03:10 PST
Created
attachment 124765
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-31 10:05:14 PST
Attachment 124765
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2012-01-31 10:07:37 PST
Committed
r106368
: <
http://trac.webkit.org/changeset/106368
>
Darin Adler
Comment 4
2012-01-31 10:18:28 PST
Comment on
attachment 124765
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=124765&action=review
> Source/JavaScriptCore/ChangeLog:9 > + Change VectorComparer::compare to use !(a == b) instead of a != b since > + it makes more sense for Vector::operator== to use the element's operator==.
But now Vector::operator!= requires the element to have operator== ;-)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug