Vector<T>::operator== shouldn't require T to have operator!= https://bugs.webkit.org/show_bug.cgi?id=77448

Reviewed by Andreas Kling.

Change VectorComparer::compare to use !(a == b) instead of a != b since
it makes more sense for Vector::operator== to use the element's operator==.

* wtf/Vector.h:

Canonical link: https://commits.webkit.org/94323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106368 268f45cc-cd09-0410-ab3c-d52691b4dbfc