Source/JavaScriptCore/wtf/Vector.h
@@ -194,7 +194,7 @@ namespace WTF {
         static bool compare(const T* a, const T* b, size_t size)
         {
             for (size_t i = 0; i < size; ++i)
-                if (a[i] != b[i])
+                if (!(a[i] == b[i]))
                     return false;
             return true;
         }
